# stripe-ai-august-demo

./: README.md  pyproject.toml
src/temporal_invoice_demo/: agent.py  fraud.py  human_review.py  invoice_service.py  stripe_integration.py  workflows.py
src/temporal_invoice_demo/web/: dashboard.py
tests/: test_scaffold.py
